2003-09-28  Michael Opdenacker <michaelo@gnu.org>

        * cursmenu.c, error.c, gtypist.c, script.c:
          Added #define _(String) gettext (String)
          so that we don't have to hack gettext.h and make it non standard.
	* autogen.sh: now copyies gettext.h from its install.
	* gettext.h: removed from CVS

2003-08-28  Rob Leslie  <rob@mars.org>

	* gtypist.c: Added support to resync with the typist after an
	  error.  If the typist presses the correct key after an error, it
	  is ignored (sync behind).  If the typist misses a key, it is
	  flagged as an error but the key is credited to the next
	  character so the typist can continue without stopping (sync
	  ahead).

2003-08-24	Dmitry Rutsky	<rutsky@school.ioffe.rssi.ru>

	* cursmenu.c:  a better handling of `left' and `right' keys in the
	  menus, don't go offscreen on the keys if there is a large
	  single-column list (as in lessons/ttde.typ).

2003-08-03	Dmitry Rutsky	<rutsky@school.ioffe.rssi.ru>

	* lessons/ru.typ:  new Russian cyrillic keyboard course.
	* po/ru.po, configure.in:  new Russian localization.
	* tools/typcombine:  tell about new course in "More lessons..."
	* *.[ch]:  corrected "gtypist-bug" to "bug-gtypist" in addresses.
	* gtypist.c:  #include <locale.h>, internationalization didn't worked
	  without it (LC_ALL was not #defined);  type of YN and RNE strings
	  changed to `unsigned char' (comparisons with them if they were
	  characters with 8th bit set didn't work correctly).
	* lessons/Makefile.am:  include ru.typ in the distribution, as well as
	  cs.typ.

2003-07-19	Dmitry Rutsky	<rutsky@school.ioffe.rssi.ru>

	* configure.in:  removed Makefiles automagically added there by
	  gettextize (yes, that was my mistake in 2003-07-01).  Added note
	  that this file will be changed by gettextize.
	* autogen.sh:  don't run gettextize if the sources were gettextized
	  already.
	* Makefile.am:  added headers to gtypist_SOURCES back (yes, that was